same edge exists

--- a/Front-End/src/app/result/result.component.html
+++ b/Front-End/src/app/result/result.component.html
@@ -1,3 +1,59 @@
-<p>
-  result works!
-</p>
+<!-- <!DOCTYPE html>
+<html lang="en">
+<body>
+      <section >
+        <div class="hero" id="about">
+            <div class="hero-description">
+              <div class="hero-text">
+                <h1 class="hero-title">Adding Fun to your Life</h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, impedit quo. Officia nisi corrupti iste asperiores accusamus quisquam quod perspiciatis vitae? Esse eum molestiae ab quasi omnis quidem officia eaque.
+                </p>
+
+              </div>
+            </div>
+        </div>
+      </section>
+      <main style="padding-bottom:40px ;">
+        <h2 class="title" id="games">List of Games</h2>
+        <div class="games">
+          <div class="game-list">
+            <img src="img/playstation-brands.svg" alt="playstation-brands" style="width:100px; height: 100px;"/ >
+            <h3>Playstation</h3>
+            <p></p>
+          </div>
+          <div class="game-list">
+            <img src="img/pacman.svg" alt="pacman" style="width:100px; height: 100px;"/>
+            <h3>Pacman</h3>
+            <p></p>
+          </div>
+          <div class="game-list">
+            <img src="img/spider.svg" alt="spiderman" style="width:100px; height: 100px;"/>
+            <h3>Spiderman</h3>
+            <p></p>
+          </div>
+          <div class="game-list">
+            <img src="img/monster.svg" alt="monster" style="width:100px; height: 100px;"/>
+            <h3>Monster</h3>
+            <p></p>
+          </div>
+          <div class="game-list">
+            <img src="img/joker.svg" alt="joker" style="width:100px; height: 100px;"/ >
+            <h3>Joker</h3>
+            <p></p>
+          </div>
+          <div class="game-list">
+            <img src="img/halloween.svg" alt="halloween" style="width:100px; height: 100px;"/>
+            <h3>Halloween</h3>
+            <p></p>
+          </div>
+
+
+        </div>
+        <div class="store" id="shop">
+        <h2 class="title">Our Store</h2>
+
+        <div class="game-store">
+
+</body>
+</html> -->
