--- a/Front-End/src/app/home/home/home.component.html
+++ b/Front-End/src/app/home/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="body" id = "body">
   <div class="vtool_bar">
     <div>
-    <button id="machine" value="circle" (click)="createMachine();disableButtons()"> <img src= "assets/icons/machine.png" width = 45px length = 45px /></button>
+    <button id="machine" value="circle" (click)="createMachine();disableButtons()"> <img src= "assets/icons/node.png" width = 50px length = 50px /></button>
     </div>
 
     <div>
       <button id="line" value="line" (click) = "createLine();disableButtons()"> <img src= "assets/icons/direction.png" width = 45px length = 45px /> </button>
     </div>
     <div>
-      <button type="button" id="run" value="run" (click)="run()" > <img src= "assets/icons/play.png" width = 45px length = 45px /> </button>
+      <button type="button" id="run" value="run" (click)="run()" > <img src= "assets/icons/work-process.png" width = 45px length = 45px /> </button>
     </div>
     <!-- <div>
       <button type="button" id="stop" value="stop" (click)="stop()"> <img src= "assets/icons/stop.png" width = 45px length = 45px /> </button>
