--- a/Front-End/src/app/result/result.component.css
+++ b/Front-End/src/app/result/result.component.css
@@ -1,83 +1,26 @@
-CSS variables section
-:root {
-  background-color: rgba(0, 0, 21, 1);
+html {
+  scroll-behavior: smooth;
+  }
+
+  * {
+  margin: 0;
+  padding: 0;
+  object-fit: contain;
+  }
+
+body {
+  background-color: rgb(3, 3, 20);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
 
 }
 
-/*Extra Large screens - Extra large desktops*/
-.header{
-
-
-}
-.heeder-large-screen{
-  display: flex !important;
-  justify-content: space-evenly !important;
-  color:orange;
-  font-size: 18px !important;
-
-
-}
-#navDemo{
-  background-color: #000015;
-
-}
-#navDemo a{
-  font-size: 13px !important;
-  color:orange;
-}
-
-.hero{
-  height: 650px;
-  background-image: url("https://source.unsplash.com/HVYepJYeHdQ");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position:center;
-  background-color: #000015;
-
-
-}
-.hero-description{
-  height: 650px;
-  background-color: rgba(0, 0, 21, .7);
-  display: flex;
-}
-.hero-text{
-  width:70% !important;
-  margin: auto !important;
-  display: flex;
-  flex-wrap: wrap;
-
-}
-
-
-.hero-text p{
-  color:white;
-  width: 50%;
-}
-.hero-title{
-   /* padding-top:80px; */
-   font-weight: 800;
-  text-transform: uppercase;
-  font-size: 80px;
-  color:orange;
-
-  text-align: center;
-
-}
-.social{
-  width:100%;
-}
-.icons{
-  font-size: 20px;
-  letter-spacing: 5px;
-
-}
-main{
-  width:80% !important;
-  margin: auto !important;
-}
 .title{
   color:white;
+  font-family: cursive;
   font-weight: 600;
   font-size: 40px;;
   margin:50px 0px;
@@ -86,13 +29,8 @@ main{
 
 }
 
-
-.game-logo img{
-  width:100%;
-  height: 100%;
-  object-fit: contain;
-}
 h3{
+  margin: 10px;
   color:white;
   text-align: center;
 }
@@ -106,329 +44,36 @@ h3{
   justify-content: space-evenly;
 }
 .game-list{
-  margin: 30px;;
-  padding: 20px;
-  height: 200px;
-  width:250px;
+  margin: 0;
+  padding: 0;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   border:1px solid gray;
   background: rgba(255, 75, 255, 0.1);
-  box-shadow: 0 8px 40px 0 rgba(45, 57, 231, 0.37);
+  box-shadow: 0 8px 40px 0 rgba(33, 42, 167, 0.37);
   backdrop-filter: blur( 4px );
   -webkit-backdrop-filter: blur( 4px );
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
+  font-family: cursive;
+  text-align: center;
 }
 .game-list:hover{
   transform: scale(1.05);
 }
-.store{
-  margin-top: 50px;
-}
-.game-store{
-  margin-top: 20px !important;
-display: flex;
-justify-content: space-evenly;
-flex-wrap: wrap;
-}
-.game-image{
-  width:300px;
-  height: 180px;
 
-}
-.game-image img{
-  width:100%;
-  height: 100%;
-  object-fit: cover;
-}
-.game-store-list{
-  width:300px;
-  height: 300px;
-   margin: 20px;
-  overflow: hidden;
-  border-top: none;
-
-    -webkit-box-shadow: 0 8px 40px 0 rgba(45, 57, 231, 0.37);
-            box-shadow: 0 8px 40px 0 rgba(45, 57, 231, 0.37);
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
-  border-bottom: 1px solid blueviolet;
+td{
   color:white;
-
+  text-align: center;
 }
-.store-text-description{
-
-padding-left:20px;
-display: flex;
-flex-direction: column;
-
-}
-h4{
-  color:white;
-  font-weight: 700;
-}
-.event-hero{
-  display: flex;
-  flex-wrap: wrap;
-  background: rgba(255, 75, 255, 0.1);
-  justify-content: space-evenly;
-  align-items: center;
-  padding:50px;
-  margin-top: 50px;
-  border:1px solid black;
-  border-radius: 10px;
-
-}
-.event-text{
-  width:50%;
-  color: orange;
-
-}
-.event-title{
-  font-size: 40px;
-  text-transform: uppercase;
-
-  font-weight: 600;
-
-
-}
-.event-image{
-  width:400px;
-  height: 500px;
-}
-.event-image img{
+hr{
+  padding: 0;
+  margin: 0;
+  position:relative;
   width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.event-text p{
-  color: white;
-}
-.contact{
-
-
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-.contact-list{
-  margin-top: 15px !important;
-  color: white;
-}
-h5{
-  color:white;
-}
-span{
-  padding-right: 10px;
-}
-.contact-list p{
-}
-.email-contact{
-  width:80%;
-  color: gray;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-
-
-
-
-
-/*General CSS and CSS reset*/
-
-html {
-scroll-behavior: smooth;
-}
-
-* {
-margin: 0;
-padding: 0;
-}
-
-
-
-
-
-
-
-
-
-
-/* ____________________________________________________________________*/
-/*MEDIA QUERIES*/
-/*Large screens - Desktop*/
-@media screen and (max-width: 1500px) {
-  .hero{
-      height: 550px !important;;
-      background-image: url("https://source.unsplash.com/HVYepJYeHdQ/1200x600");
-  }
-  .hero-description{
-      height: 550px
-  }
-  .hero-title{
-      font-size:50px;
-  }
-}
-
-/*medium screens - Laptops*/
-@media screen and (max-width: 1024px) {
-  main{
-      width:100% !important;
-      margin: auto !important;
-  }
-
-}
-
-/*Small screens - tablets*/
-@media screen and (max-width: 768px) {
-  .heeder-large-screen{
-      display:block !important;
-  }
-  header a{
-      font-size: 14px;
-  }
-  .hero{
-      height: 400px !important;
-      background-image: url("https://source.unsplash.com/HVYepJYeHdQ/480x300");
-  }
-  .hero-description{
-      height: 400px;
-      background-color: rgba(0, 0, 21, .7);
-
-
-  }
-  .hero-title{
-      font-size: 35px;;
-
-  }
-  .hero-text p{
-      width: 80%;;
-      font-size: 13px;
-  }
-  .title{
-      text-align: center;
-      font-size: 30px;
-  }
-  .event-text{
-      width:80%;
-      color: blueviolet;
-
-  }
-  .event-text p{
-      font-size: 13px;
-  }
-  .event-title{
-      font-size: 30px;
-      text-transform: uppercase;
-      font-weight: 600;
-
-
-  }
-  .event-hero{
-      width: 80% ;
-      margin: auto;
-  }
-  .event-image{
-      width:250px;
-      height: 400px;
-  }
-  .event-image img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
-  .contact-list{
-      width: 300px;
-  }
-  .contact{
-      justify-content: space-around;
-  }
-  .contact-list p{
-      font-size: 14px ;
-
-  }
-  h5{
-      font-size: 17px;
-  }
-
-}
-
-/*Extra small screens - phones*/
-@media screen and (max-width: 480px) {
-  .heeder-large-screen{
-      display:block !important;
-  }
-  .hero{
-      height: 450px !important;
-      background-image: url("https://source.unsplash.com/HVYepJYeHdQ/480x300");
-  }
-  .hero-description{
-      height: 450px;
-      background-color: rgba(0, 0, 21, .7);
-
-  }
-  .hero-title{
-      font-size: 30px;;
-      padding-top: 70px;
-  }
-  .hero-text p{
-      width: 100%;;
-      font-size: 13px;
-  }
-  .title{
-      text-align: center;
-      font-size: 25px;
-  }
-  .event-text{
-      width:100%;
-      color: blueviolet;
-
-  }
-  .event-text p{
-      font-size: 13px;
-  }
-  .event-title{
-      font-size: 30px;
-      text-transform: uppercase;
-      font-weight: 600;
-
-
-  }
-  .event-hero{
-      width: 90% ;
-      margin: auto;
-  }
-  .event-image{
-      width:250px;
-      height: 400px;
-  }
-  .event-image img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
-  .contact-list{
-      width: 300px;
-      padding:25px;
-      border:1px solid rgba(49, 45, 45, 0.5);
-      border-radius: 10px;
-  }
-  .contact-list p{
-      font-size: 12px ;
-
-  }
-  h5{
-      font-size: 15px;
-  }
-  .badge{
-
-  }
-  p{
-      font-size: 12px;
-  }
-
+  height: 1px;
+  background-color: rgb(186, 186, 184);
+  border: hidden;
 }
