--- a/Front-End/src/app/result/result.component.css
+++ b/Front-End/src/app/result/result.component.css
@@ -30,7 +30,7 @@ body {
 }
 
 h3{
-  margin: 10px;
+  margin-left: 0px;
   color:white;
   text-align: center;
 }
@@ -65,6 +65,8 @@ h3{
 }
 
 td{
+  padding: 0px 10px 10px 0px;
+  margin: 0px 10px 10px 0px;
   color:white;
   text-align: center;
 }
